// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox render should render correctly - disabled 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-label="Options menu"
    class="pf-v6-c-menu-toggle pf-m-full-width pf-m-disabled"
    data-ouia-component-id="OUIA-Generated-MenuToggle-:r5:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    disabled=""
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    />
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Checkbox render should render correctly 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-label="Options menu"
    class="pf-v6-c-menu-toggle pf-m-full-width"
    data-ouia-component-id="OUIA-Generated-MenuToggle-:r2:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    />
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Checkbox render should render correctly placeholder 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-label="Options menu"
    class="pf-v6-c-menu-toggle pf-m-full-width"
    data-ouia-component-id="OUIA-Generated-MenuToggle-:rk:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      some placeholder
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Checkbox render should render correctly with items 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-label="Options menu"
    class="pf-v6-c-menu-toggle pf-m-full-width"
    data-ouia-component-id="OUIA-Generated-MenuToggle-:r8:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    />
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Checkbox render should render correctly with items and default object value 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-label="Options menu"
    class="pf-v6-c-menu-toggle pf-m-full-width"
    data-ouia-component-id="OUIA-Generated-MenuToggle-:re:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      <span
        class="pf-v6-c-badge pf-m-read pf-v6-u-ml-sm"
      >
        1
      </span>
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Checkbox render should render correctly with items and default value 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-label="Options menu"
    class="pf-v6-c-menu-toggle pf-m-full-width"
    data-ouia-component-id="OUIA-Generated-MenuToggle-:rb:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      <span
        class="pf-v6-c-badge pf-m-read pf-v6-u-ml-sm"
      >
        1
      </span>
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`Checkbox render should render correctly with items and selected value 1`] = `
<div>
  <button
    aria-expanded="false"
    aria-label="Options menu"
    class="pf-v6-c-menu-toggle pf-m-full-width"
    data-ouia-component-id="OUIA-Generated-MenuToggle-:rh:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    />
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;
